...
            </objects>
            <point key="canvasLocation" x="-53" y="698"/>
        </scene>
        <!--Discounts-->
        <scene sceneID="cMg-lA-8vy">
            <objects>
                <tableViewController title="Discounts" id="VxX-Bz-t46" customClass="DiscountsViewController" customModule="Discount_Locator" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="FeH-rZ-s88">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DiscountCell" textLabel="bby-3S-Ez3" detailTextLabel="UTj-qc-1M5" style="IBUITableViewCellStyleValue1" id="bg4-jw-afT">
...
                                    <autoresizingMask key="autoresizingMask"/>
                                </tableViewCellContentView>
                                <connections>
                                    <segue destination="YxE-7a-RKm" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="o3u-Zt-e2B"/>
                                </connections>
                            </tableViewCell>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Map" id="cOu-Qx-Enh">
                                <rect key="frame" x="0.0" y="72" width="600" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cOu-Qx-Enh" id="j0X-1o-FGi">
                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                </tableViewCellContentView>
...
                <viewController id="TH8-f3-YVV" customClass="VcNav" customModule="Discount_Locator" customModuleProvider="target" sceneMemberID="viewController">
                    <containerView key="view" opaque="NO" contentMode="scaleToFill" id="pzC-YP-mZt">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                    </containerView>
                    <navigationItem key="navigationItem" id="S7T-NU-Fgq">
                        <barButtonItem key="leftBarButtonItem" image="Image" id="okA-hN-30L"/>
                        <barButtonItem key="rightBarButtonItem" image="Settings" id="q76-ba-qZu" userLabel="Settings">
                            <color key="tintColor" red="0.62731567850479708" green="0.62731567850479708" blue="0.62731567850479708" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <segue destination="Rc9-ce-cdQ" kind="presentation" modalPresentationStyle="overCurrentContext" modalTransitionStyle="coverVertical" id="mIf-jx-GnB"/>
                            </connections>
                        </barButtonItem>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="btN-rS-RoE">
                                <rect key="frame" x="249" y="417" width="113" height="54"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="113" id="8NX-Rh-28H"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                <state key="normal" title="Close">
                                    <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="onClose:" destination="7Xm-T6-etm" eventType="touchUpInside" id="yPA-3r-05J"/>
                                </connections>
                            </button>
...
